css/style.css
/* ... */
footer .footer-icons > a {
  color: #ffffff;
  font-size: 23px;
}
.divider {
  padding: 10px 80px;
}
.divider > hr {
  border-color: #ffffff;
}
@media only screen and (max-width: 1000px) {
  body {
    /* background-color: lightblue; */
  }
  .hero-content {
    align-items: center;
    justify-content: center;
    text-align: center;
    padding: 50px;
  }
}
@media only screen and (max-width: 550px) {
  /* .hero {
    margin-bottom: 50px;
  }
  .hero-content {
    padding-top: 140px;
  }
  .hero .herotext > p {
    font-size: 20px;
  }
  .hero .herotext > h2 {
    font-size: 25px;
  } */
  .hero-content {
    display: none;
  }
  .hero .hero-content-resp {
    display: block;
    padding-top: 100px;
  }
  .hero-content-resp .herotext {
    text-align: center;
  }
  .hero-content-resp .herotext .text {
    display: flex;
    word-spacing: 10px;
    text-align: center;
    justify-content: center;
  }
  .hero-content-resp .herotext .text > p {
    padding-right: 10px;
    padding-top: 10px;
  }
  .hero-content-resp .herotext .text > h2 {
    font-size: 10px; !important
  }
  .hero-content-resp .container {
    display: flex;
  }
  .hero-content-resp .hero-image > img {
    max-height: 500px;
    max-width: 80%;
  }
  .container .hero-btn {
    padding-top: 100px;
  }
  .container .hero-btn .btn {
    width: 120px;
  }
  .Aboutimage > img {
    display: none;
  }
  .aboutcontent {
    padding: 40px 10px;
  }
  .aboutcontent .SectionHeader > h2 {
    font-size: 35px;
  }
  .service .serviceheader > h2 {
    font-size: 35px;
  }
  .service-item .text > h4 {
    font-size: 18px;
  }
  .service-item .text > p {
    font-size: 15px;
  }
  .divider {
    padding: 10px 20px;
  }
  .experience {
    display: block;
    width: 100%;
  }
  .experience .timeline .timeline-item {
    width: 100%;
  }
  .experience .timeline .timeline-item.right {
    left: 0;
    padding-right: 30px;
  }
  .experience .timeline::after {
    content: "";
    position: absolute;
    width: 2px;
    background: #ef233c;
    top: 0;
    bottom: 0;
    left: 20px;
  }
  .experience .timeline .timeline-item::after {
    content: "";
    position: absolute;
    width: 16px;
    height: 16px;
    top: 48px;
    left: -8px;
    background: #ffffff;
    border: 2px solid #ef233c;
    border-radius: 16px;
    z-index: 1;
  }
  .experience .timeline .timeline-item.right::after {
    left: -8px;
  }
  .experience .timeline .timeline-item.right::before {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    top: 46px;
    z-index: 1;
    border: 10px solid;
    left: 0px;
    border-color: transparent #dddddd transparent transparent;
  }
  .experience .timeline .timeline-item.left::before {
    left: 0px;
    border-color: transparent #dddddd transparent transparent;
  }
  .experience .timeline .timeline-text {
    padding: 30px;
    left: -10px;
    background: #ffffff;
    position: relative;
    border-right: 5px solid #dddddd;
    box-shadow: 0 0 60px rgba(0, 0, 0, 0.08);
  }

  .experience .timeline .timeline-item.left .timeline-text {
    border-right: none;
    left: 20px;
    border-left: 5px solid #dddddd;
  }
  .experience .timeline .timeline-item.left {
    left: 20px;
    padding-right: 60px;
  }

  .experience .timeline .timeline-item.right {
    left: 20px;
    padding-left: 30px;
  }
  .timeline .timeline-text {
    display: block;
  }
  .experience .timeline .timeline-item.left .timeline-date {
    top: 10px;
    text-align: left;
    left: 30px;
  }

  .experience .timeline .timeline-item.right .timeline-date {
    top: 10px;
    text-align: left;
    left: 30px;
  }
  .experience .timeline .timeline-text > h2 {
    font-size: 20px;
    padding-top: 30px;
  }
  .experience header > h2 {
    font-size: 35px;
  }

  .education {
    display: block;
    width: 100%;
  }
  .education .timeline .timeline-item {
    width: 100%;
  }
  .education .timeline .timeline-item.right {
    left: 0;
    padding-right: 30px;
  }
  .education .timeline::after {
    content: "";
    position: absolute;
    width: 2px;
    background: #ef233c;
    top: 0;
    bottom: 0;
    left: 20px;
  }
  .education .timeline .timeline-item::after {
    content: "";
    position: absolute;
    width: 16px;
    height: 16px;
    top: 48px;
    left: -8px;
    background: #ffffff;
    border: 2px solid #ef233c;
    border-radius: 16px;
    z-index: 1;
  }
  .education .timeline .timeline-item.right::after {
    left: -8px;
  }
  .education .timeline .timeline-item.right::before {
    content: "";
    position: absolute;
    width: 0;
    height: 0;
    top: 46px;
    z-index: 1;
    border: 10px solid;
    left: 0px;
    border-color: transparent #dddddd transparent transparent;
  }
  .education .timeline .timeline-item.left::before {
    left: 0px;
    border-color: transparent #dddddd transparent transparent;
  }
  .education .timeline .timeline-text {
    padding: 30px;
    left: -10px;
    background: #ffffff;
    position: relative;
    border-right: 5px solid #dddddd;
    box-shadow: 0 0 60px rgba(0, 0, 0, 0.08);
  }

  .education .timeline .timeline-item.left .timeline-text {
    border-right: none;
    left: 20px;
    border-left: 5px solid #dddddd;
  }
  .education .timeline .timeline-item.left {
    left: 20px;
    padding-right: 60px;
  }

  .education .timeline .timeline-item.right {
    left: 20px;
    padding-left: 30px;
  }
  .education .timeline .timeline-text {
    display: block;
  }
  .education .timeline .timeline-item.left .timeline-date {
    top: 10px;
    text-align: left;
    left: 30px;
  }

  .education .timeline .timeline-item.right .timeline-date {
    top: 10px;
    text-align: left;
    left: 30px;
  }
  .education .timeline .timeline-text > h2 {
    font-size: 20px;
    padding-top: 30px;
  }
  .education header > h2 {
    font-size: 35px;
  }
}
/* ... */

